--- a/public/index.html
+++ b/public/index.html
@@ -42,15 +42,15 @@
     <link href="https://unpkg.com/ionicons@3.0.0/dist/css/ionicons.min.css" rel="stylesheet" />
 
 
-    <meta property="author" content="luxi" />
-    <meta property="og:site_name" content="luxi.ux-maestro.com" />
+    <meta property="author" content="TradingPlanet" />
+    <meta property="og:site_name" content="tradingplanet.io" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
 
 
-    <meta property="twitter:site" content="luxi.ux-maestro.com" />
-    <meta property="twitter:domain" content="luxi.ux-maestro.com" />
-    <meta property="twitter:creator" content="luxi" />
+    <meta property="twitter:site" content="tradingplanet.io" />
+    <meta property="twitter:domain" content="tradingplanet.io" />
+    <meta property="twitter:creator" content="TradingPlanet" />
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:image:src" content="%PUBLIC_URL%/images/crypto-logo.png" />
     <meta property="title" content="TradingPlanet" />
@@ -60,12 +60,12 @@
     </title>
 
     <meta property="og:title" content="With TP, our governance token, you can help decide the future of the exchange. As we grow, you grow!" />
-    <meta property="og:url" content="luxi.ux-maestro.com" />
+    <meta property="og:url" content="tradingplanet.io" />
     <meta
       property="og:description"
       content="With TP, our governance token, you can help decide the future of the exchange. As we grow, you grow!"
     />
-    <meta name="twitter:site" content="luxi.ux-maestro.com" />
+    <meta name="twitter:site" content="tradingplanet.io" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="%PUBLIC_URL%/images/logo.png" />
     <meta property="og:image" content="%PUBLIC_URL%/images/logo.png"  />
